--- a/be-config.yml
+++ b/be-config.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: be-conf
+  namespace: doris
   labels:
     app.kubernetes.io/component: be
 data:
