--- a/fe-config.yml
+++ b/fe-config.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: fe-conf
+  namespace: doris
   labels:
     app.kubernetes.io/component: fe
 data:
