--- a/fe-pv.yml
+++ b/fe-pv.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: fe-pv
+  name: fe-pv-meta
   labels:
-    volume: fe
+    volume: fe-meta
 spec:
   storageClassName: doris-storage
   capacity:
@@ -11,5 +11,22 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /mnt/data/fe
+    path: /mnt/data/fe-meta
+    type: DirectoryOrCreate
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: fe-pv-log
+  labels:
+    volume: fe-log
+spec:
+  storageClassName: doris-storage
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: /mnt/data/fe-log
     type: DirectoryOrCreate
